<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:contentDescription="@string/content_description_pirate_boat_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/card_height" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:fontFamily="sans-serif-black"
        android:lines="1"
        android:text="@string/detail_title_label"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:fontFamily="sans-serif-black"
        android:lines="1"
        android:text="@string/detail_label_description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:fontFamily="sans-serif-black"
        android:lines="1"
        android:text="@string/detail_label_price"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/margin_8dp"
        app:constraint_referenced_ids="title_label,description_label,price_label" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/title_label"
        tools:text="@tools:sample/cities" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        tools:text="@tools:sample/cities" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/price_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/price_label"
        tools:text="@tools:sample/date/ddmmyy" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:contentDescription="@string/content_description_pirate_boat_greeting"
        android:src="@drawable/ic_baseline_anchor_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>